@@ -14,6 +14,10 @@
       <role name="Manager" />
       <role name="Contributor" />
     </permission>
+    <permission name="ftw.shop: Assign shopping cart portlet" acquire="False">
+      <role name="Manager" />
+      <role name="Site Administrator" />
+    </permission>
 
   </permissions>
 </rolemap>
