@@ -4,6 +4,10 @@ Changelog
 2.0.6 (unreleased)
 ------------------
 
+- Use a separate permission (ftw.shop: Assign shopping cart portlet) for the write permission
+  of the shopping cart portlet.
+  [mathias.leimgruber]
+
 - Consistently use resource directory instead of individually registered resources,
   and make resource URLs always absolute and based on portal_url.
   [erral]
